--- a/kanban.html
+++ b/kanban.html
@@ -8,91 +8,92 @@
 <body>
 	<div class="main">
 		<div class="title">Активные сделки</div>
-		<div class="kanban">
-			<div class="kanban-column">
-				<div class="kanban-column-title">Первичный контакт</div>
-				<div class="kanban-column-price">150 000 руб.</div>
-				<div class="kanban-item">
-					<div class="kanban-item-name">Сходить в магазин</div>
-					<div class="kanban-item-price">150 000 руб.</div>
-					<div class="kanban-item-author">
-						<a class="kanban-item-author-link" href="#">Павел</a>
-					</div>
-					<div class="kanban-item-date">13.10.2016</div>
-				</div>
-			</div>
-			<div class="kanban-column">
-				<div class="kanban-column-title">Переговоры</div>
-				<div class="kanban-column-price">150 000 руб.</div>
-				<div class="kanban-item">
-					<div class="kanban-item-name">Сходить в магазин</div>
-					<div class="kanban-item-price">150 000 руб.</div>
-					<div class="kanban-item-author">
-						<a class="kanban-item-author-link" href="#">Павел</a>
-					</div>
-					<div class="kanban-item-date">13.10.2016</div>
-				</div>
-				<div class="kanban-item">
-					<div class="kanban-item-name">Сходить в магазин</div>
-					<div class="kanban-item-price">150 000 руб.</div>
-					<div class="kanban-item-author">
-						<a class="kanban-item-author-link" href="#">Павел</a>
-					</div>
-					<div class="kanban-item-date">13.10.2016</div>
-				</div>
-				<div class="kanban-item">
-					<div class="kanban-item-name"></div>
-					<div class="kanban-item-price"></div>
-					<div class="kanban-item-author"></div>
-					<div class="kanban-item-date"></div>
-				</div>
-				<div class="kanban-item">
-					<div class="kanban-item-name"></div>
-					<div class="kanban-item-price"></div>
-					<div class="kanban-item-author"></div>
-					<div class="kanban-item-date"></div>
-				</div>
-			</div>
-			<div class="kanban-column">
-				<div class="kanban-column-title">Договор</div>
-				<div class="kanban-column-price">150 000 руб.</div>
-				<div class="kanban-item">
-					<div class="kanban-item-name">Сходить в магазин</div>
-					<div class="kanban-item-price">150 000 руб.</div>
-					<div class="kanban-item-author">
-						<a class="kanban-item-author-link" href="#">Павел</a>
-					</div>
-					<div class="kanban-item-date">13.10.2016</div>					
-				</div>
-				<div class="kanban-item"></div>
-				<div class="kanban-item"></div>
-				<div class="kanban-item"></div>
-			</div>
-			<div class="kanban-column">
-				<div class="kanban-column-title">Оплата</div>
-				<div class="kanban-column-price">150 000 руб.</div>
-				<div class="kanban-item">
-					<div class="kanban-item-name">Сходить в магазин</div>
-					<div class="kanban-item-price">150 000 руб.</div>
-					<div class="kanban-item-author">
-						<a class="kanban-item-author-link" href="#">Павел</a>
-					</div>
-					<div class="kanban-item-date">13.10.2016</div>					
-				</div>
-			</div>
-			<div class="kanban-column">
-				<div class="kanban-column-title">Завершение сделки</div>
-				<div class="kanban-column-price">150 000 руб.</div>
-				<div class="kanban-item">
-					<div class="kanban-item-name">Сходить в магазин</div>
-					<div class="kanban-item-price">150 000 руб.</div>
-					<div class="kanban-item-author">
-						<a class="kanban-item-author-link" href="#">Павел</a>
-					</div>
-					<div class="kanban-item-date">13.10.2016</div>					
-				</div>
+		<div id="kanban" class="kanban">
+<!-- 			<div class="kanban-column">
+	<div class="kanban-column-title">Первичный контакт</div>
+	<div class="kanban-column-price">150 000 руб.</div>
+	<div class="kanban-item">
+		<div class="kanban-item-name">Сходить в магазин</div>
+		<div class="kanban-item-price">150 000 руб.</div>
+		<div class="kanban-item-author">
+			<a class="kanban-item-author-link" href="#">Павел</a>
+		</div>
+		<div class="kanban-item-date">13.10.2016</div>
+	</div>
+</div>
+<div class="kanban-column">
+	<div class="kanban-column-title">Переговоры</div>
+	<div class="kanban-column-price">150 000 руб.</div>
+	<div class="kanban-item">
+		<div class="kanban-item-name">Сходить в магазин</div>
+		<div class="kanban-item-price">150 000 руб.</div>
+		<div class="kanban-item-author">
+			<a class="kanban-item-author-link" href="#">Павел</a>
+		</div>
+		<div class="kanban-item-date">13.10.2016</div>
+	</div>
+	<div class="kanban-item">
+		<div class="kanban-item-name">Сходить в магазин</div>
+		<div class="kanban-item-price">150 000 руб.</div>
+		<div class="kanban-item-author">
+			<a class="kanban-item-author-link" href="#">Павел</a>
+		</div>
+		<div class="kanban-item-date">13.10.2016</div>
+	</div>
+	<div class="kanban-item">
+		<div class="kanban-item-name"></div>
+		<div class="kanban-item-price"></div>
+		<div class="kanban-item-author"></div>
+		<div class="kanban-item-date"></div>
+	</div>
+	<div class="kanban-item">
+		<div class="kanban-item-name"></div>
+		<div class="kanban-item-price"></div>
+		<div class="kanban-item-author"></div>
+		<div class="kanban-item-date"></div>
+	</div>
+</div>
+<div class="kanban-column">
+	<div class="kanban-column-title">Договор</div>
+	<div class="kanban-column-price">150 000 руб.</div>
+	<div class="kanban-item">
+		<div class="kanban-item-name">Сходить в магазин</div>
+		<div class="kanban-item-price">150 000 руб.</div>
+		<div class="kanban-item-author">
+			<a class="kanban-item-author-link" href="#">Павел</a>
+		</div>
+		<div class="kanban-item-date">13.10.2016</div>					
+	</div>
+	<div class="kanban-item"></div>
+	<div class="kanban-item"></div>
+	<div class="kanban-item"></div>
+</div>
+<div class="kanban-column">
+	<div class="kanban-column-title">Оплата</div>
+	<div class="kanban-column-price">150 000 руб.</div>
+	<div class="kanban-item">
+		<div class="kanban-item-name">Сходить в магазин</div>
+		<div class="kanban-item-price">150 000 руб.</div>
+		<div class="kanban-item-author">
+			<a class="kanban-item-author-link" href="#">Павел</a>
+		</div>
+		<div class="kanban-item-date">13.10.2016</div>					
+	</div>
+</div>
+<div class="kanban-column">
+	<div class="kanban-column-title">Завершение сделки</div>
+	<div class="kanban-column-price">150 000 руб.</div>
+	<div class="kanban-item">
+		<div class="kanban-item-name">Сходить в магазин</div>
+		<div class="kanban-item-price">150 000 руб.</div>
+		<div class="kanban-item-author">
+			<a class="kanban-item-author-link" href="#">Павел</a>
+		</div>
+		<div class="kanban-item-date">13.10.2016</div>					
+	</div> -->
 			</div>
 		</div>
 	</div>
+	<script type="text/javascript" src="kanban.js"></script>
 </body>
 </html>
