--- a/kanban.html
+++ b/kanban.html
@@ -94,6 +94,12 @@
 			</div>
 		</div>
 	</div>
+	<template id="picture-template" style="display: none">
+		<div class="kanban-column">
+			<div class="kanban-column-title"></div>
+			<div class="kanban-column-price"></div>
+		</div>
+	</template>
 	<script type="text/javascript" src="kanban.js"></script>
 </body>
 </html>
