--- a/kanban.html
+++ b/kanban.html
@@ -8,9 +8,11 @@
 <body>
 	<div class="main">
 		<div class="title">Активные сделки</div>
-		<div id="kanban" class="kanban"></div>
+		<div id="kanban" class="kanban">
 		</div>
 	</div>
+	<script type="text/javascript" src="core.js"></script>
+	<script type="text/javascript" src="core_fx.js"></script>
 	<script type="text/javascript" src="kanban.js"></script>
 </body>
 </html>
