Поборола баг с пересчетом суммы

--- a/kanban.html
+++ b/kanban.html
@@ -14,4 +14,4 @@
 		<script type="text/javascript" src="core_fx.js"></script>
 		<script type="text/javascript" src="kanban.js"></script>
 	</body>
-</html>>
+</html>
